--- a/index.html
+++ b/index.html
@@ -45,18 +45,52 @@
         <h1>Class-02 </h1>
         <h1 style="color:black">Introduce myself </h1>
         <div class="sticky">
-            <p>my name is obada al matrami i`m 27 years old i really love BMW it`s my favorite cars company
-                and i love coding and solving puzzle also i love gaming.
+            <p>my name is obada al matrami i`m 27 years old i really love BMW it`s,<br>
+                my favorite cars company
+                and i love coding and solving puzzle also i love gaming. <br>
                 nice to meet you all guys thank you all.
                 if you want to solve any problem :
                 As you know i want to look to my laptop so That`s Great.
             </p>
+
         </div>
         <p style="background-color: gray; color:red;"> Do obada love coding? </p>
         <p style="background-color:black; color:yellow;"> which is the most car company obada love ?</p>
         <p style="background-color:orangered; color:whitesmoke;"> when the first time obada drive his first car ?</p>
         <P style="background-color:blue; color:tomato;"> which is the most country do obada love ? </P>
         <P style="background-color:red; color:white;"> where does obada live ?</P>
+        <p>
+            <h3> my favorite movies</h3>
+            <ul>
+                <li>seven pounds </li>
+                <li>the pursuit of happiness</li>
+                <li>alita battle angel</li>
+                <li>transformers</li>
+                <li>shawshank redemption</li>
+                <li>fast and furious</li>
+                <li>me before you</li>
+                <li>Thor</li>
+                <li>the pirates of the caribbean</li>
+                <li>john wick</li>
+            </ul>
+
+        </p>
+        <p>
+            <h3>Top ten places to visit </h3>
+            <ol>
+                <li>Maldive</li>
+                <li>Turkey</li>
+                <li>Brazil</li>
+                <li>Jordan-petra</li>
+                <li>Wild Coast, South Africa</li>
+                <li>Komodo National Park, Indonesia</li>
+                <li>The Ring Road and northern lights, Iceland</li>
+                <li>Italy</li>
+                <li>Sydney, Australia</li>
+                <li>New York City, USA</li>
+            </ol>
+        </p>
+
     </main>
 
     <div class="sticky">
