--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 nice to meet you all guys thank you all.
                 if you want to solve any problem :
                 As you know i want to look to my laptop so That`s Great.
+
+                i graduated form tafila technical unvirsity i was studed CIS computer information System 
+                 i work at a small cafe and i work at Gas station after that i work at Cars wash station .
+                  i`m so glad to let other pepole let some information about me .
+                  welcome to my site ......
             </p>
         </div>
         <p style="background-color: gray; color:red;"> Do obada love coding? </p>
