--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <title>Lab-02</title>
-   <style>
-       body {
-           background-color: darkgray;
-       }
-       h1 {
-           color: lime;
-       }
-       h1 {
-           color: red;
-       }
-       p {
-           text-align: inline;
-           color: darkgreen;
-           text-decoration: underline;
-       }
-       div.sticky {
-           position: -webkit-sticky;
-           position: sticky;
-           top: 0;
-           background-color: yellow;
-           padding: 20px;
-           font-size: 16px;
-       }
-   </style>
+    <title>Lab-02</title>
+    <style>
+        body {
+            background-color: darkgray;
+        }
+
+        h1 {
+            color: lime;
+        }
+
+        h1 {
+            color: red;
+        }
+
+        p {
+            text-align: inline;
+            color: darkgreen;
+            text-decoration: underline;
+        }
+
+        div.sticky {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            background-color: yellow;
+            padding: 20px;
+            font-size: 16px;
+        }
+
+        img {
+            width: 50%;
+            height: 50%;
+            border: 12px, color=red;
+            
+        }
+    </style>
 </head>
+
 <body>
 
     <main>
@@ -39,10 +52,12 @@
                 if you want to solve any problem :
                 As you know i want to look to my laptop so That`s Great.
 
-                i graduated form tafila technical unvirsity i was studed CIS computer information System 
-                 i work at a small cafe and i work at Gas station after that i work at Cars wash station .
-                  i`m so glad to let other pepole let some information about me .
-                  welcome to my site ......
+                i graduated form tafila technical unvirsity i was studed CIS computer information System
+                i work at a small cafe and i work at Gas station after that i work at Cars wash station .
+                i`m so glad to let other pepole let some information about me .
+                welcome to my site ......
+
+
             </p>
         </div>
         <p style="background-color: gray; color:red;"> Do obada love coding? </p>
@@ -50,6 +65,10 @@
         <p style="background-color:orangered; color:whitesmoke;"> when the first time obada drive his first car ?</p>
         <P style="background-color:blue; color:tomato;"> which is the most country do obada love ? </P>
         <P style="background-color:red; color:white;"> where does obada live ?</P>
+        <div>
+            <img src="https://i.wheelsage.org/pictures/b/bmw/m4_gts/bmw_m4_gts_81.jpeg" alt="search on google">
+
+        </div>
     </main>
 
     <div class="sticky">
@@ -58,3 +77,6 @@
 
     <script src="js/app.js"></script>
 
+</body>
+
+</html>
