--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             padding: 20px;
             font-size: 16px;
         }
+        img {
+           width: 50%;
+           height: 50%;
+           border : 5px, color = springgreen;
+
+        }
     </style>
 </head>
 
@@ -90,13 +96,13 @@
                 <li>New York City, USA</li>
             </ol>
         </p>
-
+            
     </main>
-
+            <img src="https://img.drivemag.net/media/default/0001/86/Extreme-BMW-M4-GTS-spied-0-2931-default-large.jpeg" alt="oops">
     <div class="sticky">
         <footer>CopyRight All reseved oct 2019</footer>
     </div>
-
+              
     <script src="js/app.js"></script>
 
 </body>
