--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lab-02</title>
     <style>
         body {
-            background-color: darkgray;
+            background-color: rgb(184, 182, 182);
         }
 
         h1 {
@@ -18,17 +18,11 @@
             color: red;
         }
 
-        p {
-            text-align: inline;
-            color: darkgreen;
-            text-decoration: underline;
-        }
-
         div.sticky {
             position: -webkit-sticky;
             position: sticky;
             top: 0;
-            background-color: yellow;
+            background-color: rgb(255, 81, 0);
             padding: 20px;
             font-size: 16px;
         }
@@ -51,8 +45,8 @@
         <h1>Class-02 </h1>
         <h1 style="color:black">Introduce myself </h1>
         <div class="sticky">
-            <p>my name is obada al matrami i`m 27 years old i really love BMW it`s,<br>
-                my favorite cars company
+            <p style="color: whitesmoke;">my name is obada al matrami i`m 27 years old i really love BMW it`s,<br>
+                my favorite car brand
                 and i love coding and solving puzzle also i love gaming. <br>
                 nice to meet you all guys thank you all.
                 if you want to solve any problem :
