--- a/index.html
+++ b/index.html
@@ -3,36 +3,7 @@
 
 <head>
     <title>Lab-02</title>
-    <style>
-        body {
-            background-color: rgb(184, 182, 182);
-        }
-
-        h1 {
-
-            color: lime;
-        }
-
-        h1 {
-
-            color: red;
-        }
-
-        div.sticky {
-            position: -webkit-sticky;
-            position: sticky;
-            top: 0;
-            background-color: rgb(255, 81, 0);
-            padding: 20px;
-            font-size: 16px;
-        }
-        img {
-           width: 50%;
-           height: 50%;
-           border : 5px, color = springgreen;
-
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -93,9 +64,8 @@
             
     </main>
             <img src="https://img.drivemag.net/media/default/0001/86/Extreme-BMW-M4-GTS-spied-0-2931-default-large.jpeg" alt="oops">
-    <div class="sticky">
-        <footer>CopyRight All reseved oct 2019</footer>
-    </div>
+
+            <footer> &copy; CopyRight All reseved oct 2019</footer>
               
     <script src="js/app.js"></script>
 
